--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       <img src="/img/equipo/Cristina Valenzuela.jpg" alt="equipo">
       <img src="/img/equipo/Cami Valentini.png" alt="equipo">
       <img src="/img/equipo/Carolina Troncoso.JPG" alt="equipo">
+      <img src="/img/equipo/CATALINA H.JPG" alt="equipo">
+      <img src="/img/equipo/CESAR MOYA.jpg" alt="">
     </div>
   </div>
 
