--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
       <img src="/img/equipo/Melissa Ross Blanco.JPG" alt="equipo">
       <img src="/img/equipo/pablo.jpg" alt="equipo">
       <img src="/img/equipo/RENATA B.JPG" alt="equipo">
-      <img src="/img/equipo/SARA_TARIFEÑO.jpg" alt="equipo">
       <img src="/img/equipo/Cristina Valenzuela.jpg" alt="equipo">
       <img src="/img/equipo/Cami Valentini.png" alt="equipo">
       <img src="/img/equipo/Carolina Troncoso.JPG" alt="equipo">
       <img src="/img/equipo/CATALINA H.JPG" alt="equipo">
-      <img src="/img/equipo/CESAR MOYA.jpg" alt="">
+      <img src="/img/equipo/CESAR MOYA.jpg" alt="equipo">
+      <img src="/img/equipo/SARA_TARIFEÑO.jpg" alt="equipo">
     </div>
   </div>
 
