--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <img src="/img/equipo/Carolina Troncoso.JPG" alt="equipo">
       <img src="/img/equipo/CATALINA H.JPG" alt="equipo">
       <img src="/img/equipo/CESAR MOYA.jpg" alt="equipo">
-      <img src="/img/equipo/SARA_TARIFEÑO.jpg" alt="equipo">
+      <img src="/img/equipo/SARA_TARIFENO.jpg" alt="equipo">
     </div>
   </div>
 
