Jun 4 Jun YouWeb New bg-first picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="bg-menu-gray"></div>
     <div class="bg-menu-orange">
         <div class="menu-container">
-          <div class="menu-container-img"><img src="/img/bg-first.png" alt="hero"></div>
+          <div class="menu-container-img"><img src="/img/bg-first.jpg" alt="hero"></div>
           <div class="menu-container-text">
             <span class="menu-text">You, Just Better es un centro integral de salud y medicina deportiva que promueve los estilos de vida saludables, entregando un servicio de atención personalizada y adaptando la integridad de nuestros servicios al proceso de autorealización.</span>
           </div>
