Mar 8 Jun Terminar parte de equipo

--- a/team.html
+++ b/team.html
@@ -67,6 +67,10 @@
         <img src="/img/iconos/medicina_general-white.png" alt="icon">
         <span>Medicina General</span>
     </div>
+    <div class="team-service train" onclick="filterSelection('train')">
+      <img src="/img/iconos/entrenamiento-white.png" alt="icon">
+      <span>Entrenamiento</span>
+  </div>
     <div class="team-service psi" onclick="filterSelection('psi')">
         <img src="/img/iconos/pscicologia_clinica-white.png" alt="icon">
         <span>Psicología Clinica</span>
