Mar 8 Jun Terminar parte de equipo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </div><!-- Servicios -->
   <div class="contenedor mision">
     <span>
-      "Devolver el foco de la salud a la persona, entregado una atención personalizada y promoviendo un estilo de vida saludable"
+      "Devolver el foco de la salud a la persona, entregando una atención personalizada y promoviendo un estilo de vida saludable"
     </span>
     <a target="_blank" href="http://agendamiento.softwaremedilink.com/agendas/online/f8f6bc91ed06a41fb6527cdbb7dd65b9638c84fd">Agenda tu hora aquí</a>
   </div>
