Jue 10 Jun New Nav

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <!-- <a href="/alliance.html">Alianzas</a> -->
       <a href="/team.html">Nosotros</a>
       <a target="_blank" href="http://agendamiento.softwaremedilink.com/agendas/online/f8f6bc91ed06a41fb6527cdbb7dd65b9638c84fd">Reserva Hora</a>
+      <a target="_blank" href="https://you-just-better-programs.teachable.com/courses">Academia</a>
       <a target="_blank" href="https://web.whatsapp.com/send?phone=56933809726&text=Hola!">Contacto</a>
     </nav>
   </header>
@@ -97,12 +98,28 @@
           <img src="/img/iconos/traumatologia.png" alt="">
         </div>
       </div>
-      <div class="servicio">
-        <div class="servicio-container">
+
+      <!-- <div id="popUpBox">
+        <div id="box">       
+          <h1>Kinesiología</h1>
+          <p>
+            Se desarrolla en un ámbito clínico docente, es especializado y personalizado, usando la educación, ejercicio, terapia manual ortopédica y razonamiento clínico como herramientas. Bajo un modelo personalizado, su finalidad es rehabilitar y/o realizar un reintegro deportivo correcto y eficiente para quienes hayan sufrido alguna lesión, tengan molestia o dolor y deseen volver a sus actividades normales. Por otro lado, nos enfocamos en la prevención de lesiones, por lo que quienes quieran iniciar una vida más activa de manera segura y eficiente o disminuir el riesgo de la actividad física que realizan actualmente, pueden beneficiarse de la consulta de kinesiología.
+            Busca realizar una evaluación completa, analizando la historia completa del paciente sumado a una examinación física exhaustiva para llegar a un diagnóstico funcional, evidenciando las limitaciones en la actividad y restricciones en la partición que estén influyendo en la calidad de vida de la persona. Luego se planifica e implementa un tratamiento, en donde, se educa y potencia a la persona como un ente activo en su propia rehabilitación.
+            Duración: 55 minutos
+            Precios: 
+            - 30.000 por sesión presencial (33.000 director clínico)
+            - 25.000 por sesión online (28.000 director clínico)
+          </p>
+          <div id="closeModal"></div>
+        </div>
+      </div> -->
+      <div class="servicio" >
+        <div class="servicio-container" onclick="Alert.render()">
           <span>Medicina General</span>
           <img src="/img/iconos/medicina-general.png" alt="">
         </div>
       </div>
+      
 
     </div>
   </div><!-- Servicios -->
