Jue 10 Jun New Nav

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- <a href="/alliance.html">Alianzas</a> -->
       <a href="/team.html">Nosotros</a>
       <a target="_blank" href="http://agendamiento.softwaremedilink.com/agendas/online/f8f6bc91ed06a41fb6527cdbb7dd65b9638c84fd">Reserva Hora</a>
-      <a target="_blank" href="https://you-just-better-programs.teachable.com/courses">Academia</a>
+      <a target="_blank" href="https://you-just-better-programs.teachable.com/courses">Cursos</a>
       <a target="_blank" href="https://web.whatsapp.com/send?phone=56933809726&text=Hola!">Contacto</a>
     </nav>
   </header>
