--- a/team.html
+++ b/team.html
@@ -29,10 +29,10 @@
   <header class="nav">
     <img class="logo" src="/img/logo.png" alt="small-logo">
     <nav class="menu">
-      <a href="/" class="selected">Inicio</a>
+      <a href="/">Inicio</a>
       <a target="_blank" href="https://blog.justbetter.cl/">Blog</a>
       <!-- <a href="/alliance.html">Alianzas</a> -->
-      <a href="/team.html">Nosotros</a>
+      <a href="/team.html" class="selected">Nosotros</a>
       <a target="_blank" href="http://agendamiento.softwaremedilink.com/agendas/online/f8f6bc91ed06a41fb6527cdbb7dd65b9638c84fd">Reserva Hora</a>
       <a target="_blank" href="https://you-just-better-programs.teachable.com/courses">Academia</a>
       <a target="_blank" href="https://web.whatsapp.com/send?phone=56933809726&text=Hola!">Contacto</a>
@@ -199,7 +199,7 @@
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    ga('create', 'UA-199543835-2', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
