--- a/team.html
+++ b/team.html
@@ -96,7 +96,7 @@
     </div>
     <div class="team-picture show kine">
       <img src="/img/equipo/cesar.jpg" alt="team-image">
-      <span>Cesar Diaz</span>
+      <span>Cesar Moya</span>
   </div>
     <div class="team-picture show train">
       <img src="/img/equipo/cata.jpg" alt="team-image">
