--- a/index.html
+++ b/index.html
@@ -55,19 +55,48 @@
     <h2 class="title">
       Servicios
     </h2>
+
     <div class="servicios">
+      <div class="servicio" onclick="Alert.render('Kine')">
+        <div class="servicio-container">
+          <span>Kinesiología</span>
+          <img src="/img/iconos/kinesiologia.png" alt="">
+        </div>
+      </div>
+
+      <div id="popUpKine" class="popUpBox">
+        <div class="box">       
+          <h1>Kinesiología</h1>
+          <div class="box-container">
+          <p>
+            Realiza una evaluación completa, analizando el historial del paciente además de una examinación física, donde se evidencian las limitaciones que influyen en la calidad de vida del paciente.
+          </p>
+          <ul>
+            <li>Consulta Presencial $30.000 Duración: 55 min</li>
+            <li>Consulta Online $25.000 Duración: 55 min</li>
+            <li>Consulta Director Clinico Presencial $33.000 Duración: 55 min</li>
+            <li>Consulta Director Clinico Online $28.000 Duración: 55 min</li>
+            <li>Masaje Descontracturante Presencial $28.000 Duración: 55 min</li>
+            <li>Botas Recovery Presencial $5.000 Duración: 30 min</li>
+          </ul>
+          </div>
+          <div id="closeModalKine"></div>
+        </div>
+      </div>
+
       <div class="servicio" onclick="Alert.render('MediD')">
         <div class="servicio-container">
           <span>Medicina Deportiva</span>
           <img src="/img/iconos/medicina_deportiva.png" alt="">
         </div>
       </div>
+
       <div id="popUpMediD" class="popUpBox">
         <div class="box">       
           <h1>Medicina Deportiva</h1>
           <div class="box-container">
             <p>
-              En construcción
+              En consulta de medicina del deporte, se busca hacer un chequeo de salud del atleta, desde la salud cardiaca hasta aspectos físicos, metabólicos y nutricionales. Además, se revisan aspectos que impactan directamente sobre el rendimiento deportivo y la aparición de lesiones, como por ejemplo el sueño, y los niveles de hierro o de vitamina D dentro de otros.
             </p>
             <ul>
               <li>Medicina del Deporte Presencial $45,000 Duración: 30 min</li>
@@ -102,33 +131,6 @@
           </ul>
           </div>
           <div id="closeModalNutri"></div>
-        </div>
-      </div>
-
-      <div class="servicio" onclick="Alert.render('Kine')">
-        <div class="servicio-container">
-          <span>Kinesiología</span>
-          <img src="/img/iconos/kinesiologia.png" alt="">
-        </div>
-      </div>
-
-      <div id="popUpKine" class="popUpBox">
-        <div class="box">       
-          <h1>Kinesiología</h1>
-          <div class="box-container">
-          <p>
-            Realiza una evaluación completa, analizando el historial del paciente además de una examinación física, donde se evidencian las limitaciones que influyen en la calidad de vida del paciente.
-          </p>
-          <ul>
-            <li>Consulta Presencial $30.000 Duración: 55 min</li>
-            <li>Consulta Online $25.000 Duración: 55 min</li>
-            <li>Consulta Director Clinico Presencial $33.000 Duración: 55 min</li>
-            <li>Consulta Director Clinico Online $28.000 Duración: 55 min</li>
-            <li>Masaje Descontracturante Presencial $28.000 Duración: 55 min</li>
-            <li>Botas Recovery Presencial $5.000 Duración: 30 min</li>
-          </ul>
-          </div>
-          <div id="closeModalKine"></div>
         </div>
       </div>
 
@@ -167,7 +169,7 @@
           <h1>Entrenamiento</h1>
           <div class="box-container">
           <p>
-            En construcción
+            El área de entrenamiento de You busca desde su base el presentar la actividad física de manera amigable y cercana, donde la invitación está puesta hacia aumentar el movimiento de la persona, preocupándonos de manera individualizada por el bienestar del alumno. 
           </p>
           <ul>
             <li>Entrenamiento Grupal Online $40.000 Duración: 55 min</li>
