--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
         </div>
       </div>
 
+      <div class="servicio" onclick="Alert.render('LSM')">
+        <div class="servicio-container">
+          <span>LifeStyle Medicine</span>
+          <img src="/img/iconos/life-style-medicine.png" alt="">
+        </div>
+      </div>
+
+      <div id="popUpLSM" class="popUpBox">
+        <div class="box">       
+          <h1>LifeStyle Medicine</h1>
+          <div class="box-container">
+          <p>
+            Atención médica completa, inicia con una entrevista amplia y detallada al paciente, comprendiendo su historial médico completo, examen físico y solicitud de exámenes complementarios en caso de requerirse. Con todos estos antecedentes se realiza una evaluación del estado de salud actual, identificando los hábitos que se deben fortalecer y aquellos que se deben modificar para encaminar al paciente hacia una vida más sana.
+          </p>
+          <ul>
+            <li>Life Style Medicine Consulta Presencial $45.000 Duración: 45 min</li>
+            <li>Life Style Medicine Consulta Online $40.000 Duración: 45 min</li>
+            <li>Life Style Medicine Control Presencial $30.000 Duración: 30 min</li>
+            <li>Life Style Medicine Control Online $25.000 Duración: 30 min</li>
+          </ul>
+          </div>
+          <div id="closeModalLSM"></div>
+        </div>
+      </div>
+
       <div class="servicio" onclick="Alert.render('PsiD')">
         <div class="servicio-container">
           <span>Psicología del Deporte</span>
@@ -192,7 +217,7 @@
 
       <div class="servicio" onclick="Alert.render('PsiC')">
         <div class="servicio-container">
-          <span>Psicología Clinica</span>
+          <span>Psicología Clínica</span>
           <img src="/img/iconos/psicolofia_deporte.png" alt="">
         </div>
       </div>
@@ -258,6 +283,39 @@
           <div id="closeModalMediG"></div>
         </div>
       </div>
+
+      <div class="servicio" onclick="Alert.render('BioM')">
+        <div class="servicio-container">
+          <span>Biomecánica</span>
+          <img src="/img/iconos/biomecanica.png" alt="">
+        </div>
+      </div>
+
+      <div id="popUpBioM" class="popUpBox">
+        <div class="box">       
+          <h1>Biomecánica</h1>
+          <div class="box-container">
+          <p>
+            La Biomecánica es la ciencia que analiza el movimiento humano. Tiene su base teórica en ciencias como anatomía, física, mecánica e ingeniería entre otras. Por otro lado, utiliza además diversas tecnologías en conjunto a su base teórica para cuantificar el movimiento.
+          </p>
+          <ul>
+            <li>Evaluación de carrera $80.000 Duración: 30 min</li>
+            <li>Screening de carrera $40.000 Duración: 30 min</li>
+            <li>Evaluación de fuerza $40.000 Duración: 30 min</li>
+          </ul>
+          </div>
+          <div id="closeModalBioM"></div>
+        </div>
+      </div>
+      
+      <div class="servicio-empty">
+ 
+      </div>
+
+      <div class="servicio-empty">
+ 
+      </div>
+
       
 
     </div>
@@ -298,7 +356,7 @@
     </div>
     <div class="call-to-action">
       <img src="/img/iconos/ubicacioin.png" alt="ubicacion">
-      <span>San Pascual 736, Las Condes</span>
+      <span>San Pascual 736, Las Condes, Santiago</span>
     </div>
   </div>
 
