--- a/team.html
+++ b/team.html
@@ -63,27 +63,35 @@
         <img src="/img/iconos/nutricion-white.png" alt="icon">
         <span>Nutrición</span>
     </div>
-    <div class="team-service medi" onclick="filterSelection('medi')">
+    <div class="team-service medig" onclick="filterSelection('medig')">
         <img src="/img/iconos/medicina_general-white.png" alt="icon">
         <span>Medicina General</span>
+    </div>
+    <div class="team-service biom" onclick="filterSelection('biom')">
+      <img src="/img/iconos/biomecanica-white.png" alt="icon">
+      <span>Biomecánica</span>
+    </div>
+    <div class="team-service lsm" onclick="filterSelection('lsm')">
+      <img src="/img/iconos/life-style-medicine.png" alt="icon">
+      <span>LifeStyle Medicine</span>
     </div>
     <div class="team-service train" onclick="filterSelection('train')">
       <img src="/img/iconos/entrenamiento-white.png" alt="icon">
       <span>Entrenamiento</span>
   </div>
-    <div class="team-service psi" onclick="filterSelection('psi')">
+    <div class="team-service psic" onclick="filterSelection('psic')">
         <img src="/img/iconos/pscicologia_clinica-white.png" alt="icon">
         <span>Psicología Clinica</span>
     </div>
-    <div class="team-service psi" onclick="filterSelection('psi')">
+    <div class="team-service psid" onclick="filterSelection('psid')">
       <img src="/img/iconos/pscicologia_deportiva-white.png" alt="icon">
       <span>Psicología Deportiva</span>
     </div>
-    <div class="team-service medi" onclick="filterSelection('medi')">
+    <div class="team-service medid" onclick="filterSelection('medid')">
       <img src="/img/iconos/medicina_deportiva-white.png" alt="icon">
       <span>Medicina Deportiva</span>
     </div>
-    <div class="team-service tii" onclick="filterSelection('ti')">
+    <div class="team-service ti" onclick="filterSelection('ti')">
         <img src="/img/iconos/desarrollo-white.png" alt="icon">
         <span>Desarrollo</span>
     </div>
@@ -102,7 +110,7 @@
       <img src="/img/equipo/cata.jpg" alt="team-image">
       <span>Catalina Hernandez</span>
     </div>
-    <div class="team-picture show ti">
+    <div class="team-picture show ti train">
       <img src="/img/equipo/cristobal.jpg" alt="team-image">
       <span>Cristóbal Ugarte</span>
     </div>
@@ -120,7 +128,7 @@
     </div>
     <div class="team-picture show train">
       <img src="/img/equipo/francisco.jpg" alt="team-image">
-      <span>Francisco Guzman</span>
+      <span>Francisco Guzmán</span>
     </div>
     <div class="team-picture show kine">
       <img src="/img/equipo/cristi.jpg" alt="team-image">
@@ -134,11 +142,11 @@
       <img src="/img/equipo/melissa.jpg" alt="team-image">
       <span>Melissa Ross</span>
     </div>
-    <div class="team-picture show  medicina">
+    <div class="team-picture show  medig">
       <img src="/img/equipo/andrea.jpg" alt="team-image">
       <span>Andrea Maldonado</span>
     </div>
-    <div class="team-picture show medicina">
+    <div class="team-picture show lsm">
       <img src="/img/equipo/renata.jpg" alt="team-image">
       <span>Renata Barchesi</span>
     </div>
@@ -158,7 +166,7 @@
     </div>
     <div class="call-to-action">
       <img src="/img/iconos/ubicacioin.png" alt="ubicacion">
-      <span>San Pascual 736, Las Condes</span>
+      <span>San Pascual 736, Las Condes, Santiago</span>
     </div>
   </div>
   
