--- a/team.html
+++ b/team.html
@@ -34,6 +34,7 @@
       <!-- <a href="/alliance.html">Alianzas</a> -->
       <a href="/team.html" class="selected">Nosotros</a>
       <a target="_blank" href="http://agendamiento.softwaremedilink.com/agendas/online/f8f6bc91ed06a41fb6527cdbb7dd65b9638c84fd">Reserva Hora</a>
+      <a target="_blank" href="https://yjb.cl/training-new">Entrenamiento</a>
       <a target="_blank" href="https://you-just-better-programs.teachable.com/courses">Academia</a>
       <a target="_blank" href="https://web.whatsapp.com/send?phone=56933809726&text=Hola!">Contacto</a>
     </nav>
@@ -158,7 +159,7 @@
 
   <div class="contenedor call-to-actions">
     <div class="call-to-action">
-      
+
       <img src="/img/iconos/whatsapp.png" alt="whatsapp">
       <span>
         <a target="_blank" href="https://web.whatsapp.com/send?phone=56933809726&text=Hola!">+569 33809727</a>
@@ -169,7 +170,7 @@
       <span>San Pascual 736, Las Condes, Santiago</span>
     </div>
   </div>
-  
+
   <footer class="contenedor">
     <div class="footer">
       <span>© You Just Better Programs <script>document.write(new Date().getFullYear())</script></span>
@@ -202,7 +203,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="/js/main.js"></script>
-  
+
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
