Vie 06 ago Updates

--- a/team.html
+++ b/team.html
@@ -100,60 +100,135 @@
 
   <div class="team-pictures">
     <div class="team-picture show kine">
-        <img src="/img/equipo/alonso.jpg" alt="team-image">
+      <img src="/img/equipo/alonso.jpg" alt="team-image">
+      <div>
         <span>Alonso Niklitschek</span>
+        <ul class="cv">
+          <li>Kinesiologia, Universidad Mayor, 2014</li>
+          <li>Diplomado en Terapia Manual, Universidad de Chile, 2016</li>
+          <li>Diplomado en Terapia Manual, Universidad de Chile, 2016</li>
+          <li>Cursando Magister en Terapias Ortopédicas, Universidad Andrés Bello</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show kine">
       <img src="/img/equipo/cesar.jpg" alt="team-image">
-      <span>Cesar Moya</span>
+      <div>
+        <span>Cesar Moya</span>
+        <ul class="cv">
+          <li>Kinesiologia, Universidad Mayor, 2014</li>
+        </ul>
+      </div>
   </div>
     <div class="team-picture show train">
       <img src="/img/equipo/cata.jpg" alt="team-image">
-      <span>Catalina Hernandez</span>
+      <div>
+        <span>Catalina Hernandez</span>
+        <ul class="cv">
+          <li>Licenciada en Pedagogía en Educación Física.</li>
+          <li>Titulada con distinción Cum Laude, Universidad Andrés Bello, 2016.</li>
+          <li>Kinesiología, Universidad Mayor, actualmente</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show ti train">
       <img src="/img/equipo/cristobal.jpg" alt="team-image">
-      <span>Cristóbal Ugarte</span>
+      <div>
+        <span>Cristóbal Ugarte</span>
+        <ul class="cv">
+          <li>Ingeniería Civil en Informática, Universidad Adolfo Ibañez, 2018</li>
+          <li>Certificado en Fundamentos de la Web, Coding Dojo</li>
+          <li>Certificado en Python, Coding Dojo</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show kine train">
       <img src="/img/equipo/daniella.jpg" alt="team-image">
-      <span>Daniella Vivallo</span>
+      <div>
+        <span>Daniella Vivallo</span>
+        <ul class="cv">
+          <li>Kinesiología, Universidad Mayor, 2011</li>
+          <li>Diplomado en Fisiologia del ejercicio, Universidad Mayor, 2014</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show traum">
       <img src="/img/equipo/diego.jpg" alt="team-image">
-      <span>Diego Contreras</span>
+      <div>
+        <span>Diego Contreras</span>
+        <ul class="cv">
+          <li>Licenciado en Medicina, Facultad de Medicina, Universidad de Chile, 2014.</li>
+          <li>Título de Médico-Cirujano, Facultad de Medicina, Universidad de Chile, 2016.</li>
+          <li>Título de Ortopedia y Traumatología, Facultad de Medicina, Universidad de Chile, 2020</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show ti">
       <img src="/img/equipo/elizabeth.jpg" alt="team-image">
-      <span>Elizabeth Mena</span>
+      <div>
+        <span>Elizabeth Mena</span>
+        <ul class="cv">
+          <li></li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show train">
       <img src="/img/equipo/francisco.jpg" alt="team-image">
-      <span>Francisco Guzmán</span>
+      <div>
+        <span>Francisco Guzmán</span>
+        <ul class="cv">
+          <li>Pedagogía en Educación Física, Universidad Metropolitana de Ciencias de la Educación,  2011–2014/2018-2019 </li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show kine">
       <img src="/img/equipo/cristi.jpg" alt="team-image">
-      <span>Cristina Valenzuela</span>
+      <div>
+        <span>Cristina Valenzuela</span>
+        <ul class="cv">
+          <li>Kinesiología, Universidad Mayor</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show kine">
       <img src="/img/equipo/mariajesus.jpg" alt="team-image">
-      <span>Maria Jesús Martinez</span>
+      <div>
+        <span>Maria Jesús Martinez</span>
+        <ul class="cv">
+          <li>Kinesiologia,Universidad del Desarrollo, 2018</li>
+          <li>Rehabilitación Muscuesqueletica de columna y extremidades en Universidad de los Andes 2021</li>
+          <li>Terapias manual ortopedica, Universidad Andres Bello 2018-2020</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show nutri">
       <img src="/img/equipo/melissa.jpg" alt="team-image">
-      <span>Melissa Ross</span>
+      <div>
+        <span>Melissa Ross</span>
+        <ul class="cv">
+          <li>Titulo profesional Nutricionista Dietista, Universidad Santo Tomás, 2013. Licenciatura en Nutrición y Dietética</li>
+          <li>Magister en nutricion para la actividad fisica y del deporte, Universidad Mayor,2018</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show  medig">
       <img src="/img/equipo/andrea.jpg" alt="team-image">
-      <span>Andrea Maldonado</span>
+      <div>
+        <span>Andrea Maldonado</span>
+        <ul class="cv">
+          <li>Medico Cirujano Universidad Nacional Andrés Bello Viña del Mar, 2015 (aprobado con distinción EUNACOM)</li>
+        </ul>
+      </div>
     </div>
     <div class="team-picture show lsm">
       <img src="/img/equipo/renata.jpg" alt="team-image">
-      <span>Renata Barchesi</span>
-    </div>
-    <div class="team-picture show ti">
-      <img src="/img/equipo/sofia.jpg" alt="team-image">
-      <span>Sofia Pinto</span>
+      <div>
+        <span>Renata Barchesi</span>
+        <ul class="cv">
+          <li>Medico cirujano 2016, Universidad Nacional Andres Bello, Sede Viña del Mar. Certificación en Medicina de Estilos de Vida, 2020</li>
+          <li>Cursando Magister Ciencias del deporte, Universidad Mayor</li>
+        </ul>
+      </div>
     </div>
   </div>
 
