Lun 09 ago Updates

--- a/team.html
+++ b/team.html
@@ -123,11 +123,11 @@
     <div class="team-picture show train">
       <img src="/img/equipo/cata.jpg" alt="team-image">
       <div>
-        <span>Catalina Hernandez</span>
+        <span>Catalina Hernández</span>
         <ul class="cv">
-          <li>Licenciada en Pedagogía en Educación Física.</li>
+          <li>Licenciada en Pedagogía en Educación Física, Universidad Andrés Bello, 2015.</li>
           <li>Titulada con distinción Cum Laude, Universidad Andrés Bello, 2016.</li>
-          <li>Kinesiología, Universidad Mayor, actualmente</li>
+          <li>Kinesiología, Universidad Mayor, actualmente.</li>
         </ul>
       </div>
     </div>
@@ -168,7 +168,7 @@
       <div>
         <span>Elizabeth Mena</span>
         <ul class="cv">
-          <li></li>
+          <li>Coordinadora administrativa, con más de 7 años de experiencia administrativa en áreas de salud</li>
         </ul>
       </div>
     </div>
@@ -177,7 +177,7 @@
       <div>
         <span>Francisco Guzmán</span>
         <ul class="cv">
-          <li>Pedagogía en Educación Física, Universidad Metropolitana de Ciencias de la Educación,  2011–2014/2018-2019 </li>
+          <li>Pedagogía en Educación Física, Universidad Metropolitana de Ciencias de la Educación,  2011–2014 / 2018-2019 </li>
         </ul>
       </div>
     </div>
@@ -227,6 +227,26 @@
         <ul class="cv">
           <li>Medico cirujano 2016, Universidad Nacional Andres Bello, Sede Viña del Mar. Certificación en Medicina de Estilos de Vida, 2020</li>
           <li>Cursando Magister Ciencias del deporte, Universidad Mayor</li>
+        </ul>
+      </div>
+    </div>
+    <div class="team-picture show kine">
+      <img src="/img/equipo/adolfo.jpg" alt="team-image">
+      <div>
+        <span>Adolfo López</span>
+        <ul class="cv">
+          <li>Kinesiólogo, titulado de la Universidad Mayor, Licenciado en Kinesiología en la
+            Universidad Mayor, 2016</li>
+          <li>Magister en Medicina y Ciencias del deporte U. Mayor, 2019</li>
+        </ul>
+      </div>
+    </div>
+    <div class="team-picture show ti">
+      <img src="/img/equipo/sofa.jpg" alt="team-image">
+      <div>
+        <span>Sofia Contreras</span>
+        <ul class="cv">
+          <li>Estudiante de Publicidad, Universidad Diego Portales 2020</li>
         </ul>
       </div>
     </div>
